--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": " faiza-calculator",
+  "name": " faiza22-calculator",
   "version": "1.0.5",
   "description": "A calculator  with Typescript, Node.js and Inquirer",
   "main": "index.js",
